# pg-extended-sqlx-queries

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: commit.yml
macros/: Cargo.toml
macros/src/: lib.rs  table_type.rs  utils.rs
macros/src/table_type/: column.rs  table.rs
macros/src/value_expr_type/: derive.rs  mod.rs
src/: delete.rs  expr.rs  fake.rs  insert.rs  lib.rs  pagination.rs  select.rs  table_layout.rs  testing.rs  traits.rs  update.rs
src/expr/: alias.rs  cast.rs  collate.rs  conflict.rs  filter.rs  function.rs  keywords.rs  multi.rs  other.rs  returning.rs  select_expr.rs  value.rs
src/expr/conflict/: builder.rs  query.rs
src/expr/filter/: builder.rs  expr.rs
src/expr/function/: expr.rs  extract.rs
src/expr/math/: builder.rs  expr.rs  mod.rs
src/expr/select_expr/: join.rs
src/expr/value/: arguments.rs
src/insert/: conflict.rs  many.rs
src/insert/many/: row.rs
src/select/: count.rs  exists.rs  join.rs
src/table_layout/: columns.rs
tests/: macro.rs
