[package]
name = "pg-extended-sqlx-queries-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
[lib]
proc-macro = true
[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5"

[dev-dependencies]
prettyplease = "0.2"
anyhow = "1"

[features]
